First try my work

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png">
+      <img src= "images/Logo Image.png" class="logo">
       <ul>
-        <li>ABOUT</li>
-        <li>SKILLS</li>
-        <li>WORK</li>
-        <li>CONTACT</li>
+        <li>My Work</li>
+        <li>About Me</li>
       </ul>
     </header>
     <section class="heroImg">
@@ -24,10 +22,9 @@
     </section>
     <footer>
       <ul>
-        <li>ABOUT</li>
-        <li>SKILLS</li>
-        <li>WORK</li>
-        <li>CONTACT</li>
+        <li>Resume</li>
+        <li>Linkedin</li>
+        <li>Contact</li>
       </ul>
     </footer>
   </body>
