--- a/index.html
+++ b/index.html
@@ -12,12 +12,41 @@
         <li>About Me</li>
       </ul>
     </header>
-    <section class="heroImg">
+    <section class="Forte">
       <div class="content">
-        <img src="images/placeholder_picture.png">
-        <h1>Your Name</h1>
-        <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
-        <button>Download Resume</button>
+        <img src="images/Forte.pic.png" width="447px" height="912px">
+        <h1>Background</h1>
+        <p>Forte is a music discovery app that helps music lovers find new music to listen to. This is done by presenting them with a preview of a song and the option to choose to like or dislike the song.</p>
+        <h2>Problem</h2>
+        <p>The idea of Forte came from the problem user’s recommendations on listening apps often do not reflect their personal tastes and users have to discover new music on their own.</p>
+        <h3>Solution</h3>
+        <p>The solution to this founded the idea for Forte. Forte is an app that could help users find new music quickly and efficiently while evolving to the fast paced environment that we live in today.</p>
+        <button>Learn More</button>
+      </div>
+    </section>
+    <section class="Arts">
+      <div class="content.Arts">
+        <img src="images/Arts.pic.png" width="447px" height="912px">
+        <h1>Background</h1>
+        <p>Arts of life is an art collective for people with physical and developmental disabilities.</p>
+        <h2>Problem</h2>
+        <p>The website doesn’t fully represent the values of the organization, Arts of Life and was lacking user friendliness. 
+        </p>
+        <h3>Solution</h3>
+        <p>The solution is to create a fun, creative, and professional website by updating the layout and making the site more user friendly.</p>
+        <button>Learn More</button>
+      </div>
+    </section>
+    <section class="DOI">
+      <div class="content.DOI">
+        <img src="images/DOI.pic.png" width="447px" height="912px">
+        <h1>Background</h1>
+        <p>The Department of Interior website houses information for a collective of government agencies that oversee the mangament and protection of cultural heritage and natural resources.</p>
+        <h2>Problem</h2>
+        <p>The website for the DOI is not intuitive, well organized or user friendly while lacking information heirarchy. </p>
+        <h3>Solution</h3>
+        <p>The solution is to reorganzie the website through user testing and card sorting while providing easy to understand information and highlighting important causes. </p>
+        <button>Learn More</button>
       </div>
     </section>
     <footer>
