I dont know what I'm doing
I have no idea

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button>Learn More</button>
       </div>
     </section>
-    <section class="Arts">
+    <section class="Arts" >
       <div class="content.Arts">
         <img src="images/Arts.pic.png" width="447px" height="912px">
         <h1>Background</h1>
@@ -38,7 +38,7 @@
       </div>
     </section>
     <section class="DOI">
-      <div class="content.DOI">
+      <div class="content.DOI" display:grid>
         <img src="images/DOI.pic.png" width="447px" height="912px">
         <h1>Background</h1>
         <p>The Department of Interior website houses information for a collective of government agencies that oversee the mangament and protection of cultural heritage and natural resources.</p>
